--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,14 +1,12 @@
 \section{Extreme Programming versus Scrum}
-The two are quite similar, both being agile methodologies with self-organising teams and all. 
-However, there exists some significant differences.
+\Kristian{why do we even have this section?, from mountaingoatsoftware}
+The two are similar, both being agile methodologies with self-organising teams, however there exists some significant differences.
 
-The most significant difference is that Scrum does not have any development practices.
-XP, on the other hand, have plenty of development oriented practices, such as: pair programming, test-driven development, refactoring, automated testing, simple design, and so forth.
+The most significant difference, is that Scrum does not have any development oriented practises.
+XP on the other hand, has plenty of development oriented practises. Practises such as pair programming, test-driven development, refactoring, automated testing, simple design, and so forth.
 
-Another difference is the flexibility of the iteration or sprints, as they are called in Scrum.
-In Scrum a sprint is between two week to one month in length.
+Another difference is the flexibility of the iteration, or sprints as they are called in Scrum.
 When a sprint is planned and started, the sprint backlog is not susceptible to change.
-In XP the iterations are between one to two weeks in length.
 The iteration backlog in XP can be changed, as long as the swapped features are not in progress.
 
 The last significant difference is the role responsible for prioritising the work order.
