--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -27,9 +27,8 @@ Based on this knowledge the second problem can be stated:
 \begin{center}
 \textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
 \end{center}\Alexander{Define what ``operated'' means, what operations?}
-\pagebreak
 
-
+\Alexander{Make sure the third problem is the first thing written on page 2}
 %Third Problem - Methodology%
 %\noindent Most large scale software projects fail. 
 \noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
