Draft for reflection about roles

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -71,9 +71,33 @@ The everlasting question of
 \subsection{Roles}
 The pair consists of two roles: a driver and a co-driver.
 The driver takes care of the coding and the co-driver keeps a sense of perspective.
+For the pair programming to work it is there are communication between both roles.
+
+
+
+The driver role...
+
+
+
+
+
+The co-driver role was often the role which initialised and maintained the communication, while letting the driver focus on coding.
+This required the co-driver to be attentive towards the actions and state-of-mind of the driver.
+Additionally it requires that the co-driver is not afraid to question the decisions of the driver or afraid of being wrong or embarrassed of seemingly stupid questions.
+
+
+
+
+
+
+
+
 It is important to have good communication between the two roles to benefit from the cooperation.
 It is imprortant to remember that pair programming takes the full attention of two programmers, who could be working on each their own problem.
 That means the the pair should work together to create more value, in terms of speed and quality combined, than they would have if they were each working on their own.
+
+We discovered that pair programming, while productive, was exhausting not matter what role you had.
+
 %something about our experience
 % some times hard to co-drive without a good overview of the task and code
 % takes confidence to drive
@@ -91,28 +115,3 @@ That means the the pair should work together to create more value, in terms of s
 \subsection{Productivity}
 
 
-
-
-
-
-%
-%Initially, we used Teamviewer for pair programming instead of one shared physical monitor as XP prescribes.
-%\Alexander{Mention we used Teamviewer because we did not have any monitors.}
-%We found that this did not work as well as with a single monitor. 
-%The main problem was that it did not encourage frequent driver change.
-%\Alexander{I do not agree, it was pretty easy to change driver.} 
-%This meant that often one person coded and the other person was just looking at it.
-%\Alexander{Why were the others ``just looking at it''? The practice explicit states the others do not just ``look''.}
-%We experienced a learning curve adopting pair programming, and initially it was difficult for the observer to contribute with input and most work was done by the driver. 
-%The driver had to carry the work load.
-%
-%Another issue was that if the task being worked on was not well understood by the pair, two people ended up not advancing towards a solution. We addressed the issue by temporarily splitting the pair to perform research and experimentation, which could help reach a solution.
-%\Alexander{Source saying something about implementing TDD and PairProgramming, where it is wasteful to pair program if both developers no nothing.}
-%\Alexander{How did the ``fix'' work? Was it not double the needed time?}
-%
-%\Alexander{Better segway}
-%We found that the forced timed pair programming switch did not sit right with us. Multiple times we experienced that we should switch just before the current issue was done. This created overhead and we sometimes forgot to change partners. \Alexander{What did this mean for the project?}
-%We therefore decided to use a task-based approach where switches were only made between issues or between issues estimated to take more than 3 hours. We suspect that this may have hurt the collective ownership, but we found it more productive. We later abandoned the 3 hour switch.
-%
-%We attempted to reduce the overhead by solving trivial issues alone rather than in pairs. 
-%\Alexander{Why, explain}
