Moved image to improve report structure.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -17,7 +17,7 @@ These practices support each other (e.g. a coding standard supports pair program
 The complete map of which practices support each other, can be seen in \Cref{fig:practiceSupport}.
 \begin{figure}[H]
 	\centering
-	\includegraphics[]{Images/xpPracticeSupport.png}
+	\includegraphics[scale=0.85]{Images/xpPracticeSupport.png}
 		\caption{Map of the practices and how they support each other.
 			From \textit{Extreme Programming Explained (1999)} \citep[p. 70]{xp:explained}. }
 	\label{fig:practiceSupport}
