--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -5,7 +5,7 @@ This project is developed with an educational purpose, to which some requirement
 Partly due to these requirements and restrictions, we made some adaptations to XP for it to fit inside the project parameters.
 
 \subsection{40-hour Week}
-The purpose of this practise is to ensure energetic developers every day, and not to overwork them to the point of burnout \citet[p. 58]{xp:explored}.
+The purpose of this practise is to ensure energetic developers every day, and not to overwork them to the point of burnout as explained by \citet[p. 58]{xp:explored}.
 We will implement this practise by timeboxing the project time.
 This way we will still be able to ensure rested and energetic developers, regardless of courses and other non-project matters.
 
@@ -19,7 +19,7 @@ We expect that creating a formal code standard, when we already have an informal
 The informal code standard has been created and expanded through our previous experiences of working together.
 
 \subsection{Collective Ownership}
-This practise supports flexible and quick changes \citet[p. 54]{xp:explored}, however some risks still exist.
+As explained by \citet[p. 54]{xp:explored}, this practise supports flexible and quick changes, however some risks still exist.
 The problems most likely to occur in this project are: lack of expertise, violating private space, and personal pride.
 
 The problem with lack of expertise occurs when a problem is just passed on, without anyone having any expertise in the overall problem.
@@ -35,11 +35,11 @@ This is a problem we will have to watch out for and to remind ourselves of XP's 
  
 
 \subsection{Continuous Integration}
-According to XP this practise should be automated through the setup of a dedicated build server\citet[p. 57]{xp:explored}.
+According to \citet[p. 57]{xp:explored} this practise should be automated through the setup of a dedicated build server.
 Making this an automated task, should ensure the developers working on the current version.
 The integration itself should not be automated, but the build and testing should, i.e., when a story is completed, the changes are integrated into the current build.
 The build server then automatically builds and tests the build.
-If the tests are not at a 100\%, the developers must fix their code or discard it, to ensure the build always passes 100\% of the tests. %bahahaha
+If the tests are not at a 100\%, the developers must fix their code or discard it, to ensure the build always passes 100\% of the tests.
 
 Even though finding and setting up a build server would be the correct way of doing things, we will manually integrate and build the code from a dedicated branch.
 We will do this because, we believe we can achieve the same benefits with the manual approach, without using time to set up the build server.
@@ -47,7 +47,7 @@ This is only viable because of the small size of the project, which results in s
 
 \subsection{Metaphor}
 The metaphor is an effective way to get a shared vision for the project.
-A meaningful metaphor helps create and name the correct objects and actions \citet[p. 87]{xp:explored}.
+A meaningful metaphor helps create and name the correct objects and actions as described by \citet[p. 87]{xp:explored}.
 
 We see this project as a music player that plays music with a tempo matching the user's pace.
 This metaphor might change throughout this project.
@@ -64,16 +64,16 @@ We will connect these to our laptops to create two workstations ready for pair p
 There exists several versions of how to program in pairs. We will try different methods to experience the advantages, and disadvantages of the different versions.
 
 \subsection{Planning Game}
-Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes \citet[p. todo]{xp:explored}. 
+Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes \citet[p. \Kristian{Find page number}]{xp:explored}. 
 \Kristian{grep for bad cites?}
 
 In XP planning happens in two stages. There is the release planning and the iteration planning.
-The release planning event is where the customer writes all the user stories, he wants the program to cover\citet[p. todo]{xp:explored}.
+The release planning event, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}, is where the customer writes all the user stories, he wants the program to cover.
 The developers then estimate the time it will take to implement the different stories.
 Then the customer prioritises the stories by what should be done first.
 Finally the stories to be done in the release are selected based on project velocity, and priority of each story.
 
-The iteration planning event is where the customer selects which of the stories, from the release plan, he wants implemented in the upcoming iteration \citet[p. todo]{xp:explored}.
+The iteration planning event, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}, is where the customer selects which of the stories, from the release plan, he wants implemented in the upcoming iteration.
 Usually the highest prioritised stories are chosen, but often these are superseded by the stories not completely implemented last iteration.
 The customer is asked to choose a number of stories, based on the project velocity, so the developers are not overworked.
 
@@ -81,7 +81,7 @@ A story can be estimated individually, or collaboratively. Both methods have str
 We decided to collaboratively estimate stories, as that approach allows us to use our combined experience to find the right estimation.
 
 \subsection{Refactoring}
-XP prescribes refactoring to be done on the spot when a bad smell is identified, to prevent building on top of bad code \citet[p. todo]{xp:explored}.
+As mentioned by \citet[p. \Kristian{Find page number}]{xp:explored}, XP prescribes refactoring to be done on the spot when a bad smell is identified, to prevent building on top of bad code.
 Although refactoring is important, we will evaluate each bad smell by severity and time needed to fix, before correcting it.
 We will then decide if it is worthwhile to correct the bad smell, compared to implementing new features. Otherwise it will be created as a task/story.
 
@@ -91,7 +91,7 @@ Each module will contain multiple classes, which all will be short and readable.
 To improve readability we will name methods after their function and only implement features with an immediate purpose. This will prevent having code that is never used.
 
 \subsection{Small Releases}
-The purpose of this practise is to reduce the risks if changes in the use domain occur\citet[p. todo]{xp:explored}.
+The purpose of this practise is to reduce the risks if changes in the use domain occur, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}.
 Although releases are frequent, they must only contain complete features.
 
 This project contains three major features, which we will try to match to approximately three releases.
