--- a/Content/TactileInterface/intro.tex
+++ b/Content/TactileInterface/intro.tex
@@ -1,6 +1,6 @@
-In this chapter user stories and implementation for the non-graphical user interface (NGUI), are described. The NGUI makes it possible to control the play, pause, stop, previous and next functionality of the music player by tapping anywhere on the screen.
+The non-graphical user interface (NGUI) provides a way of using the application without having to look at the screen. As mentioned in \Cref{chap:intro} this is a useful feature, as the user may not be able to look at the screen while running, but they may still want to operate the application.
 
-\Dan{Argue why we chose to use a black screen with taps over say gestures, ``shakes'', voice commands or something else}
-
+Several approaches can be taken when it comes to creating a NGUI, and 
+\Dan{Write a bit about the approach we took. Also remember Ivan's ToDo's}
 %\Kristian{repeat?}
 %The chapter contains a description of the user stories created, which acted as a basis for the development of the NGUI in regards to the requirements it should fulfill. Points of interest from its implementation are also described.
