Prepared titles for future work

--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -21,32 +21,34 @@ The user is expected to use the application while running, and in addition to th
 \textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
 \end{center}
 
-Se
+This was achieved by creating a non-graphical user interface, allowing the user to tap the screen, when it is turned off, to control the music player: play, pause, next, previous.
 
 
 \subsection{Future Work}
-Things to do in the future.
+In its current state, the application fulfils the requirements stated by the questions, but as with most software there are improvements to make. Some possible improvements are:
+
+\paragraph{Better Flow}
+
+\paragraph{GUI Improvements}
+
+\paragraph{NGUI Improvements}
+
+\paragraph{Manipulation of Music Tempo}
+
+\paragraph{Training Programs}
+
+\paragraph{Integration with Other Services}
+
+\paragraph{Polishing Existing Features}
 
 
-The application can provide music matching a runners pace. This is achieved by registering steps taken and querying a local music library on the device. This solves our problem as we know the tempo of the song in the library.
-
-While the application can play music and has a good (within 10 percent of target) step detections it has shortcomings: 
-
-The GUI is not fully developed, it is possible to break the positioning of song in the cover flow. Unavailable information such tempo (BPM) makes songs unusable for matching with pace. The selecting of music does not scale well with the size of the music library. A small music library (6 to 10) makes it very hard to match tempo with pace. 
-
-improvements to the application:
-\begin{itemize}
-\item Reading tempo from file, currently it relies solely on a online API to retrieve tempo.
-\subitem Alternatively analyse music file in order to discover tempo.
-\item Altering tempo live, could be helpful to small libraries.
-\item Manual edit of song metadata. 
-\end{itemize}
-
-
-%Q2:
-
-This is solved by adding a interface, that only relies on touch to be operated. This allows a running people to focus sight on the path ahead instead of a phone. 
-
+%\begin{itemize}
+%\item Reading tempo from file, currently it relies solely on a online API to retrieve tempo.
+%\subitem Alternatively analyse music file in order to discover tempo.
+%\item Altering tempo live, could be helpful to small libraries.
+%\item Manual edit of song metadata. 
+%\end{itemize}
+%
 
 % interval programs
 % online album cover
