added Ivan todo's

--- a/Content/Conclusion/intro.tex
+++ b/Content/Conclusion/intro.tex
@@ -1,1 +1,3 @@
+\Ivan{Uder kapitel 11, skal vi have et afsnit om vores tilpasning og brug af XP.}
+\Kristian{et eller andet sted burde vi skrive om hvordan XP er meget flexible og vores kilder beskriver pratises forskelligt.}
 In this chapter, we will try to answer the questions asked in \Cref{chap:intro}. This will be done in two separate parts: one for the application and one for the methodology.
