--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,4 +1,5 @@
 \section{Extreme Programming versus Scrum}
+\Ivan{motiver sammanligningen}
 \Kristian{why do we even have this section?, from mountaingoatsoftware}
 The two are similar, both being agile methodologies with self-organising teams, however there exists some significant differences.
 
@@ -12,3 +13,5 @@ The iteration backlog in XP can be changed, as long as the swapped features are 
 The last significant difference is the role responsible for prioritising the work order.
 In Scrum the Product Owner prioritises the product backlog, but the developers choose the work order.
 In XP the customer prioritises the product backlog, and the developers must work following this prioritisation. 
+
+\Ivan{evt. diskuter forskellenes betydning for jer}
