--- a/Content/TactileInterface/useCases.tex
+++ b/Content/TactileInterface/useCases.tex
@@ -8,3 +8,5 @@ A screen is turned off when the power button is pressed.}
 \item The application can still be controlled after the \texttt{Power} button is pressed.
 \item play, pause, stop, previous and next functionally should still be available with no graphical interface.
 \end{itemize}}
+\Ivan{Hvad vil det sige? alle eller kun nogle funktioner}
+\Ivan{Kap 8.1: Overvej muligheder for fejlbetjening.}
