--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -1,4 +1,5 @@
 \section{Pair Programming}
+\Ivan{Kap 10.1-3: Sørg for at uddyb dem grundigt!}
 Throughout the project we experimented with and observed several interesting things.
 We experimented with things like \textit{workstation setup} and \textit{scheduled partner switches}.
 During the project we made interesting observations about \textit{interpersonal compatibility}, \textit{expertise level}, \textit{roles}, \textit{distractions}, \textit{quality}, and \textit{productivity}.
