Added counter-todos to some of ivans.

--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,5 +1,6 @@
 \section{Extreme Programming versus Scrum}
 \Ivan{motiver sammanligningen}
+\Alexander{Write something about Scrum being the most (by far) known and used agile methodology, hence a comparison is warranted.}
 \Kristian{why do we even have this section?, from mountaingoatsoftware}
 The two are similar, both being agile methodologies with self-organising teams, however there exists some significant differences.
 
@@ -15,3 +16,4 @@ In Scrum the Product Owner prioritises the product backlog, but the developers c
 In XP the customer prioritises the product backlog, and the developers must work following this prioritisation. 
 
 \Ivan{evt. diskuter forskellenes betydning for jer}
+\Alexander{If we have time, it would be a nice suggestion, but at this time it is not likely.}
