Slight addition to roles

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -78,29 +78,29 @@ The driver role was in charge of writing the code.
 We, at first, experienced that it would put some pressure on the driver, as he was worried about making mistakes.
 This problem solved itself with experience and collaboration.
 Further, the technical skills of the driver, must be relatively high to understand and implement the ideas of the co-driver.
-In situations where the technical skills of the driver was insufficient, the inadequacy was overcome through communication or a role change was performed.
+In situations where the technical skills of the driver were insufficient, the inadequacy was overcome through communication or a role change was performed.
 
 The co-driver role was continuously reviewing the code and making sure it made sense in the larger perspective.
 To achieve this, his role was often to initialise the communication.
 For some it took a bit of practice to be able to break the ice, but once the fear of intrusion was overcome, it was no problem at all.
-Another difficulty we observed, was when the co-driver was too eager to share his thoughts, that he broke the drivers flow, just to tell him about a typo.
+Another difficulty we observed, was when the co-driver was too eager to share his thoughts, that he broke the driver's flow, just to tell him about a typo.
 This difficulty was remedied through experience, however, we are still not completely able to tell when the driver is ``in the zone''.
 We believe with experience this occurrence will be so rare, it will not affect the pair programming much.
 Another problem we observed was, when the co-driver had difficulty expressing his thoughts, due to the lack of a technical vocabulary.
-These types of problems was usually solved by writing prototypes or longer discussion session.
+These types of problems were usually solved by writing prototypes or having longer discussion session.
 
 A general problem was the difficulty of instantly being the co-driver after a pair switch.
-After a pair switch, one would often lack perspective and do not always realise the reasons for the drivers actions.
-\Alexander{How/Can we solve this?}
-
-
-\subsection{Distractions}
-
+After a pair switch, one would often lack perspective and therefore not always realise the reasons for the drivers actions.
+There are two options for solving this problem: either the driver takes some time to explain the situation to the co-driver, or the co-driver spends some time trying to get an overview of the situation, while the driver continues programming.
+Both of those options do, however, have  negative side effects.
+The former results in a time-wise overhead, and the latter would result in a period where pair programming is not really taking place, resulting in lower quality code, as the co-driver has to focus on understanding rather than providing a code review.
 
 
 \subsection{Quality}
-
-
+%no metrics
+%feelsgood.jpg
+%refactoring
+%test
 
 \subsection{Productivity}
 
