--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -64,16 +64,16 @@ We will connect these to our laptops to create two workstations ready for pair p
 There exists several versions of how to program in pairs. We will try different methods to experience the advantages, and disadvantages of the different versions.
 
 \subsection{Planning Game}
-Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes \citet[p. \Kristian{Find page number}]{xp:explored}. 
+Planning is important. It lets you know how fast you work, what to do next, provides an effective means of communication with the customer, and allows you to quickly respond to changes since the iteration backlog is open for entirety of an iteration.
 \Kristian{grep for bad cites?}
 
 In XP planning happens in two stages. There is the release planning and the iteration planning.
-The release planning event, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}, is where the customer writes all the user stories, he wants the program to cover.
+The release planning event, as explained by \citet[p. 40]{xp:planning}, is where the customer writes all the user stories, he wants the program to cover.
 The developers then estimate the time it will take to implement the different stories.
 Then the customer prioritises the stories by what should be done first.
 Finally the stories to be done in the release are selected based on project velocity, and priority of each story.
 
-The iteration planning event, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}, is where the customer selects which of the stories, from the release plan, he wants implemented in the upcoming iteration.
+The iteration planning event, as explained by \citet[Iteration Planning]{xp:online}, is where the customer selects which of the stories, from the release plan, he wants implemented in the upcoming iteration.
 Usually the highest prioritised stories are chosen, but often these are superseded by the stories not completely implemented last iteration.
 The customer is asked to choose a number of stories, based on the project velocity, so the developers are not overworked.
 
@@ -81,7 +81,7 @@ A story can be estimated individually, or collaboratively. Both methods have str
 We decided to collaboratively estimate stories, as that approach allows us to use our combined experience to find the right estimation.
 
 \subsection{Refactoring}
-As mentioned by \citet[p. \Kristian{Find page number}]{xp:explored}, XP prescribes refactoring to be done on the spot when a bad smell is identified, to prevent building on top of bad code.
+As mentioned by \citet[Refactor Mercilessly]{xp:online}, XP prescribes refactoring throughout a project's life cycle. We will refactor on the spot when a bad smell is identified, to prevent building on top of bad code.
 Although refactoring is important, we will evaluate each bad smell by severity and time needed to fix, before correcting it.
 We will then decide if it is worthwhile to correct the bad smell, compared to implementing new features. Otherwise it will be created as a task/story.
 
@@ -91,7 +91,7 @@ Each module will contain multiple classes, which all will be short and readable.
 To improve readability we will name methods after their function and only implement features with an immediate purpose. This will prevent having code that is never used.
 
 \subsection{Small Releases}
-The purpose of this practise is to reduce the risks if changes in the use domain occur, as explained by \citet[p. \Kristian{Find page number}]{xp:explored}.
+The purpose of this practise is to reduce the risks if changes in the use domain occur, as explained by \citet[p. 61]{xp:explored}.
 Although releases are frequent, they must only contain complete features.
 
 This project contains three major features, which we will try to match to approximately three releases.
