Added something about quality

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -62,12 +62,6 @@ Both would likely have solved the problem at the same speed in the end, but now 
 Some of these problems could maybe be alleviated if we had been better at switching roles (i.e., letting the other person drive), but sometimes it can be very difficult to force two conflicting personalities to work together, and we believe it is important to try and make a team where conflicting personalities either are not present, or at least where they are not forced to work together.
 Avoiding a certain combination in a pair may, in conclusion, be preferable to making sure all possible combinations of pairs are used throughout the project.
 
-\subsection{Expertise Level}
-\Alexander{Change subsection title}
-The everlasting question of 
-
-
-
 
 \subsection{Roles}
 The pair consists of two roles: a driver and a co-driver.
@@ -97,11 +91,23 @@ The former results in a time-wise overhead, and the latter would result in a per
 
 
 \subsection{Quality}
-%no metrics
-%feelsgood.jpg
-%refactoring
-%test
+One of the major arguments for using pair programming is that is improves the quality of the code produced.
+Although we have no metrics to prove it, we feel like the code we produced was generally of a higher quality than what we usually produce when programming individually.
+This increase in quality, is partly because of the instant code review given by the co-driver, which results in less need for refactoring, and easier maintenance of the code.
+Further, the solutions are often more elegant when pair programming than when programming individually.
+
 
 \subsection{Productivity}
+%when both have no idea or expertise
+%distractions and keeping each other working
+%Faster ideas
+%Trivial issues vs complicated issues
+%Mention less refactoring (code review) from quality
 
 
+
+
+
+
+%pp generelt
+%koble det til pp i kap 2 adaptation
