--- a/Content/TactileInterface/useCases.tex
+++ b/Content/TactileInterface/useCases.tex
@@ -6,7 +6,5 @@ The user story on which the implementation of the non-graphical user interface w
 A screen is turned off when the power button is pressed.}
 {\begin{itemize}
 \item The application can still be controlled after the \texttt{Power} button is pressed.
-\item play, pause, stop, previous and next functionally should still be available with no graphical interface.
+\item Play, pause, stop, previous and next functionally should still be available with no graphical interface.
 \end{itemize}}
-\Ivan{Hvad vil det sige? alle eller kun nogle funktioner}
-\Ivan{Kap 8.1: Overvej muligheder for fejlbetjening.}
