--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -98,6 +98,19 @@ Further, the solutions are often more elegant when pair programming than when pr
 
 
 \subsection{Productivity}
+One of the major concerns about pair programming is if it is productive enough to ``seal'' the work force of two developers for a single story.
+We are not in a position to conclude this, but in our opinion it depends on the team using it.
+
+We experienced and rectified some problems with using pair programming in our team.
+First off, when a problem was outside the expertise of both developers, they would both search the internet for an answer.
+This would usually lead to both developers reading the same material and experimenting with the same solutions.
+This can be seen as unproductive, since two developers are during the same task.
+...
+
+Secondly we discovered that if part of the pair got distracted, the other would likely get sucked in as well.
+This gave rise to some situations where both developers unknowingly supported each others slacking.
+These situations often started with the co-driver getting exhausted and then easily distracted.  
+
 %when both have no idea or expertise
 %distractions and keeping each other working
 %Faster ideas
